oppgraderer maven-surefire-plugin, og setter illegal-access=permit