@@ -1398,12 +1398,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
                 <configuration>
 
                     <!-- Ekskluderer integrasjonstester som slutter på *IT. De kjøres av failsafe-plugin -->
                     <excludes>
                         <exclude>*IT</exclude>
                     </excludes>
+
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+
+<!--                    <reuseForks>false</reuseForks>-->
+<!--                    <forkCount>0</forkCount>-->
 
                     <systemPropertyVariables>
                         <java.awt.headless>true</java.awt.headless>
